styles.css
body {
    font-family: 'Montserrat', sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
}
#title {
    font-family: 'EB Garamond', serif;
    margin-top: 100px;
    margin-bottom: 10px;
    text-align: center;
}
.subtext {
    margin: 10px;
    text-align: center;
    color: var(--bs-secondary-color)
}
#websitelink {
    color: var(--bs-secondary-color);
    font-style: italic;
    text-decoration: none;
    background-image: linear-gradient(rgb(158, 47, 25),rgb(158,47,25));
    background-size: 0% 0.1em;
    background-position-y: 100%;
    background-position-x: 0%;
    background-repeat: no-repeat;
    transition: background-size 0.2s ease-in-out;
}
#websitelink:hover, #websitelink:focus, #websitelink:active {
    transition-duration: 0.5s;
    color: rgb(158,47,25);
    background-size: 100% 0.1em;
}
.menu {
    position: sticky;
    top: 0;
    background-color: black;
    overflow: hidden;
    color: white;
    z-index: 1000;
}
.menu a {
    float: left;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
    transition-duration: 0.5s;
}
.menu a:hover {
    transition-duration: 0.5s;
    background-color: #e0dfda;
    color: black;
}
.menu a.active {
    background-color: white;
    color:black;
}
.imagecontainer {
    text-align:center;
}
.titlewrapper {
    background-image: url("https://lh3.googleusercontent.com/p/AF1QipNBLJ7YsnhAUMuHeM1JzHUFjmkKgbmQShfbmYTY=s1360-w1360-h1020-rw");
    background-size: cover;
    background-position: center;
}
.titletextoverlay {
    padding-bottom: 50px;
    padding-top: 10px;
    background-color: rgba(255,255,255,0.5)
}

.card {
    transition: 0.2s;
    position: relative;
    z-index: 1;
}

.card:hover {
    transform: translateY(-1px);
    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.15);
    position: relative;
    z-index: 1;
}

.page-content {
  animation: popIn 0.6s ease-out;
}

@keyframes popIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

mark {
    border-radius: 4px;
    background-color: white;
}

.paragraph {
  padding-left: 20px;
  padding-right: 20px;
}

.subtitle {
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 20px;
}

